# MacticScript

./: BABEL_PLUGIN_STRUCTURE.md  MINIMACT_INTEGRATION_GUIDE.md  MINIMUM_DEPENDENCIES.md  README.md  RECAST_VS_SWC.md  SIMPLE_TRANSPILER_SUCCESS.md  minimact_full_refactored.rsc  minimact_full_refactored_v2.rsc  minimal_counter_transpiler.rsc  rustscript-parser-module.md  rustscript-specification.md
generated-swc/: Cargo.toml  build.bat  component.rs  helpers.rs  lib.rs
generated-swc/extractors/: hooks.rs
generated-swc/generators/: mod.rs
rustscript-plugin-minimact/: README.md
src/rustscript/: Cargo.toml  README.md  test_codegen.py  test_gaps.py  test_minimact.py  test_parser.sh
src/rustscript/examples/: test.rsc
src/rustscript/examples/console_remover-output/: index.js  lib.rs
src/rustscript/examples/dist_deep/: index.js  lib.rs
src/rustscript/examples/dist_optional/: index.js  lib.rs
src/rustscript/examples/matches_test-output/: index.js  lib.rs
src/rustscript/examples/simple-output/: index.js  lib.rs
src/rustscript/examples/tsx_parser_test/: extract_interfaces.rsc  input.tsx
src/rustscript/src/: lib.rs  main.rs
src/rustscript/src/autofix/: mod.rs
src/rustscript/src/codegen/: babel.rs  mod.rs  swc.rs  swc_patterns.rs  type_context.rs
src/rustscript/src/lexer/: lexer.rs  token.rs
src/rustscript/src/mapping/: fields.rs  helpers.rs  mod.rs  nodes.rs  patterns.rs
src/rustscript/src/parser/: ast.rs  parser.rs
src/rustscript/src/semantic/: hoist_unwraps.rs  mod.rs  (+4 more)
src/rustscript/tests/: test_autofix.rs
test_components/: Counter.tsx
(+82 files in other folders)
