[package]
name = "minimact-swc-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
swc_common = "17"
swc_ecma_ast = "18"
swc_ecma_parser = "27"
swc_ecma_visit = "18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"

[profile.release]
lto = true
